// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for SegmentProfiles's sendGroup destination action: all fields 1`] = `
Object {
  "anonymousId": "tKaa(2A",
  "groupId": "tKaa(2A",
  "integrations": Object {
    "All": false,
  },
  "traits": Object {
    "testType": "tKaa(2A",
  },
  "userId": "tKaa(2A",
}
`;

exports[`Testing snapshot for SegmentProfiles's sendGroup destination action: required fields 1`] = `
Object {
  "anonymousId": "tKaa(2A",
  "groupId": "tKaa(2A",
  "integrations": Object {
    "All": false,
  },
  "traits": Object {},
  "userId": "tKaa(2A",
}
`;
